kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marketplace
  namespace: marketplace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: marketplace
  template:
    metadata:
      labels:
        app: marketplace
    spec:
      containers:
      - name: marketplace
        image: marconioni/kiiiproekt:latest
        ports:
          - containerPort: 8080
