kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: marketplace-service
  namespace: marketplace
spec:
  selector:
    app: marketplace
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
