kubernetes/stateful-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: marketplace-db
  namespace: marketplace
spec:
  clusterIP: None
  selector:
    app: marketplace-db
  ports:
    - port: 5432
      targetPort: 5432
